# config

./: .drone.star  .travis.yml  BoostConfigConfig.cmake.in  CMakeLists.txt  README.md  appveyor.bat  appveyor.yml  build.jam  config.htm  configure  requirements.txt
.circleci/: config.yml
.drone/: boost.sh
.github/workflows/: ci.yml
checks/: Jamfile.v2  config.jam  test_case.cpp
checks/architecture/: Jamfile.jam  Jamroot.jam  mips.cpp  s390.cpp
checks/std/: cpp_aggregate_bases.cpp  cpp_aggregate_bases_17.cpp  cpp_aggregate_nsdmi.cpp  cpp_aggregate_nsdmi_14.cpp  cpp_alias_templates.cpp  cpp_alias_templates_11.cpp  cpp_aligned_new.cpp  cpp_aligned_new_17.cpp  cpp_attributes.cpp  cpp_attributes_11.cpp  cpp_binary_literals.cpp  cpp_binary_literals_14.cpp  cpp_capture_star_this.cpp  cpp_capture_star_this_17.cpp  cpp_char8_t.cpp  cpp_char8_t_20.cpp  cpp_concepts_20.cpp  cpp_conditional_explicit.cpp  cpp_conditional_explicit_20.cpp  cpp_constexpr.cpp  cpp_constexpr_11.cpp  cpp_constexpr_14.cpp  cpp_constexpr_17.cpp  cpp_decltype.cpp  cpp_decltype_11.cpp  cpp_decltype_auto.cpp  cpp_decltype_auto_14.cpp  cpp_deduction_guides.cpp  cpp_deduction_guides_17.cpp  cpp_delegating_constructors.cpp  cpp_delegating_constructors_11.cpp  cpp_enumerator_attributes.cpp  cpp_enumerator_attributes_17.cpp  cpp_exceptions.cpp  cpp_exceptions_03.cpp  cpp_explicit_conversion.cpp  cpp_explicit_conversion_11.cpp  cpp_fold_expressions.cpp  cpp_fold_expressions_17.cpp  cpp_generic_lambdas.cpp  (+236 more)
cmake/: BoostVersion.cmake  Jamfile  default.cmake  dependencies.cmake
doc/: choosing.qbk  config.qbk  configuring_boost.qbk  macro_reference.qbk
doc/html/: index.html
doc/html/boost_config/: acknowledgements.html  boost_macro_reference.html  build_config.html  cstdint.html  guidelines_for_boost_authors.html  macros_that_choose_standard_or_boost_libraries.html  rationale.html
example/: CMakeLists.txt  Jamfile.v2  static_assert_example_2.cpp
include/boost/: config.hpp  cstdint.hpp  static_assert.hpp  version.hpp
include/boost/config/: assert_cxx03.hpp  assert_cxx11.hpp  assert_cxx14.hpp  assert_cxx17.hpp  assert_cxx20.hpp  assert_cxx23.hpp  assert_cxx98.hpp  auto_link.hpp  cpp.hpp  disable_module_warnings.hpp  pragma_message.hpp  requires_threads.hpp  select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp  select_stdlib_config_detect.hpp  suffix.hpp  workaround.hpp
include/boost/config/compiler/: borland.hpp  clang.hpp  clang_version.hpp  codegear.hpp  common_edg.hpp  cray.hpp  digitalmars.hpp  gcc.hpp  gcc_clone.hpp  gcc_compatible.hpp  gcc_xml.hpp  greenhills.hpp  hp_acc.hpp  intel.hpp  metrowerks.hpp  mpw.hpp  nvcc.hpp  pathscale.hpp  pgi.hpp  sunpro_cc.hpp  vacpp.hpp  visualc.hpp  xlcpp.hpp  xlcpp_zos.hpp
include/boost/config/cpp/: array.hpp  atomic.hpp  bind.hpp  chrono.hpp  function.hpp  hash.hpp  mem_fn.hpp  random.hpp  ratio.hpp  ref.hpp  regex.hpp  shared_ptr.hpp  thread.hpp  tuple.hpp  type_index.hpp  type_traits.hpp  unordered_map.hpp  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp
include/boost/config/detail/: cxx_composite.hpp  suffix.hpp
include/boost/config/no_tr1/: memory.hpp
include/boost/config/platform/: aix.hpp  bsd.hpp  cloudabi.hpp  cygwin.hpp  haiku.hpp  hpux.hpp  linux.hpp  vxworks.hpp  win32.hpp
include/boost/config/std/: algorithm.hpp  any.hpp  array.hpp  atomic.hpp  barrier.hpp  bit.hpp  bitset.hpp  cassert.hpp  cctype.hpp  cerrno.hpp  cfenv.hpp  cfloat.hpp  charconv.hpp  chrono.hpp  cinttypes.hpp  climits.hpp  clocale.hpp  cmath.hpp  codecvt.hpp  compare.hpp  complex.hpp  concepts.hpp  condition_variable.hpp  coroutine.hpp  csetjmp.hpp  csignal.hpp  cstdarg.hpp  cstddef.hpp  cstdint.hpp  cstdio.hpp  cstdlib.hpp  cstring.hpp  ctime.hpp  cuchar.hpp  cwchar.hpp  cwctype.hpp  debugging.hpp  deque.hpp  exception.hpp  execution.hpp  (+74 more)
include/boost/config/stdlib/: dinkumware.hpp  libcomo.hpp  libcpp.hpp  libstdcpp3.hpp  modena.hpp  msl.hpp  roguewave.hpp  sgi.hpp  stlport.hpp  vacpp.hpp  xlcpp_zos.hpp
include/boost/detail/: workaround.hpp
test/: CMakeLists.txt  Jamfile.v2  TestGen.cmake  boost_has_builtin_launder.ipp  boost_has_detect_mismatch.ipp  boost_has_hash.ipp  boost_has_int128.ipp  boost_has_part_alloc.ipp  boost_no_constexpr.ipp  boost_no_cxx11_allocator.ipp  boost_no_cxx11_defaulted_moves.ipp  boost_no_cxx11_final.ipp  boost_no_cxx11_hdr_codecvt.ipp  boost_no_cxx11_hdr_exception.ipp  boost_no_cxx11_hdr_regex.ipp  boost_no_cxx11_ref_qualifiers.ipp  boost_no_cxx11_sfinae_expr.ipp  boost_no_cxx14_constexpr.ipp  boost_no_cxx14_deprecated_attribute.ipp  boost_no_cxx14_digit_separator.ipp  boost_no_cxx14_hdr_shared_mutex.ipp  boost_no_cxx14_integer_sequence.ipp  boost_no_cxx14_member_initializer_and_aggregates.ipp  boost_no_cxx14_relaxed_constexpr.ipp  boost_no_cxx14_return_type_deduction.ipp  boost_no_cxx14_sized_deallocation.ipp  boost_no_cxx17_deduction_guides.ipp  boost_no_cxx17_default_resource.ipp  boost_no_cxx17_if_constexpr.ipp  boost_no_cxx17_iterator_traits.ipp  boost_no_cxx17_std_launder.ipp  boost_no_cxx20_hdr_bit.ipp  boost_no_cxx20_hdr_numbers.ipp  boost_no_cxx20_hdr_ranges.ipp  boost_no_cxx20_is_constant_evaluated.ipp  boost_no_cxx23_hdr_spanstream.ipp  boost_no_global_filesystem_namespace.ipp  boost_no_is_abstract.ipp  boost_no_lambdas.ipp  boost_no_std_allocator.ipp  (+58 more)
test/all/: Jamfile.v2
test/cmake/: CMakeLists.txt  main.cpp
test/cmake_test_project/: CMakeLists.txt  main.cpp
tools/: configure.in  generate.cpp
